crates/rspyts-macros/tests/ui/serde_flatten.stderr
error: unsupported Serde attribute `flatten` on this field; rspyts can reflect only `rename`. Use `rspyts::Json` for a deliberately schemaless custom wire contract
 --> tests/ui/serde_flatten.rs:7:13
  |
7 |     #[serde(flatten)]
  |             ^^^^^^^
